# ergonaut

./: .dockerignore  .editorconfig  .gitignore  .prettierrc  AGENTS.md  Ergonaut.sln  FUTURE_WORK.md  README.md  REFACTOR.md  TODO.md  auth_update.md  cleanup.md  justfile  log_stream_roadmap.md  minimal_sentinel_plan.md  package.json
.github/workflows/: dotnet-tests.yml
.image/: docker-compose-development.yaml  docker-compose-kafka.yaml  docker-compose.yaml  write-docker-env.sh
.image/api/: Dockerfile
.image/proto-tools/: Dockerfile
.image/sentinel/: Dockerfile
.image/ui/: Dockerfile
config/: appsettings.Development.json  appsettings.json  collector.development.yaml  collector.yaml
config/collector/: collector.yaml
data-protection/: key-c0669988-b057-4c3a-aff8-48c400549504.xml
docs/: api-roadmap.md  future.md  project-layer-responsibilities.md
docs/uml/: components.puml  domain.puml  sentinel-task-flow.puml
examples/sentinel-python/: Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  otel-bootstrap.sh  pyproject.toml
examples/sentinel-python/src/: api.py  logger.py  models.py  ui.py
samples/log_emitter/: README.md  add-token.sh  app.py  main.sh  otel-bootstrap.sh  pyproject.toml
scripts/: add-service-credential.sh  otelcol.sh  remove-service-credential.sh  set-default-tokens.sh
src/Ergonaut.Api/: Configuration.cs  Ergonaut.Api.csproj  Ergonaut.Api.http  Program.cs  appsettings.Development.json  appsettings.json
src/Ergonaut.App/: Ergonaut.App.csproj
src/Ergonaut.Infrastructure/: Ergonaut.Infrastructure.csproj
src/Ergonaut.Sentinel/: Ergonaut.Sentinel.csproj  Program.cs  Worker.cs
src/Ergonaut.UI/: Ergonaut.UI.csproj  Program.cs  appsettings.json
src/Sentinel/: Sentinel.csproj
(+273 files in other folders)
