[tool.poetry]
name = "log-emitter"
version = "0.0.0"
description = "Log emitter for Ergonaut Streamlit demo."
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "1.37.0"
opentelemetry-api = "1.25.0"
opentelemetry-sdk = "1.25.0"
opentelemetry-exporter-otlp = "1.25.0"
requests = "^2.32.3"
pydantic = "2.12.3"
